--- a/hidaya/ressources.qrc
+++ b/hidaya/ressources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/new/prefix1">
         <file>style.qss</file>
+        <file>mail.png</file>
     </qresource>
 </RCC>
